changing some bug

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="carousel-box">
                 <div class="title">You are Amazing 🤩 </div>
                 <div class="num">04</div>
-                <img src="Image/Snapchat-1153131269.jpg" />
+                <img src="Image/Snapchat-1153131269.jpg" alt="">
             </div>
         </div>
 
@@ -53,7 +53,7 @@
             <div class="carousel-box">
                 <div class="title">My First Love on Earth 💯</div>
                 <div class="num">05</div>
-                <img src="Image/Snapchat-1717251020.jpg" />
+                <img src="Image/Snapchat-1717251020.jpg" alt="">
             </div>
         </div>
 
@@ -61,7 +61,7 @@
             <div class="carousel-box">
                 <div class="title">And Amazing 🎀</div>
                 <div class="num">06</div>
-                <img src="Image/Snapchat-520206003.jpg" />
+                <img src="Image/Snapchat-520206003.jpg" alt="">
             </div>
         </div>
 
@@ -69,7 +69,7 @@
             <div class="carousel-box">
                 <div class="title">And Since i See You 😗 </div>
                 <div class="num">07</div>
-                <img src="Image/Snapchat-571406299.jpg" />
+                <img src="Image/Snapchat-571406299.jpg" alt="">
             </div>
         </div>
 
@@ -77,7 +77,7 @@
             <div class="carousel-box">
                 <div class="title">I feel very Lucky Everyday 😇</div>
                 <div class="num">08</div>
-                <img src="Image/Snapchat-1717251020.jpg" />
+                <img src="Image/Snapchat-1717251020.jpg" alt="">
             </div>
         </div>
 
@@ -85,14 +85,14 @@
             <div class="carousel-box">
                 <div class="title">and I have Crush on You 🥰</div>
                 <div class="num">09</div>
-                <img src="Image/Snapchat-520206003.jpg" />
+                <img src="Image/Snapchat-520206003.jpg" alt="">
             </div>
         </div>
         <div class="carousel-item">
             <div class="carousel-box img-10">
                 <div class="title">I love You ❤️</div>
                 <div class="num">10</div>
-                <img src="Image/Snapchat-571406299.jpg" />
+                <img src="Image/Snapchat-1717251020.jpg" alt="">
             </div>
         </div>
     </div>
