adding some extra images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="carousel-box">
                 <div class="title">Hi 👋</div>
                 <div class="num">01</div>
+                <img src="Image/image (3).webp" alt="">
             </div>
         </div>
 
@@ -31,6 +32,7 @@
             <div class="carousel-box">
                 <div class="title">I want to tell you Something 😍</div>
                 <div class="num">02</div>
+                <img src="Image/image (2).webp" alt="">
             </div>
         </div>
 
@@ -38,6 +40,7 @@
             <div class="carousel-box">
                 <div class="title">Please Keep Dragging 😊 </div>
                 <div class="num">03</div>
+                <img src="Image/1730996190666.jpg" alt="">
             </div>
         </div>
 
